syntax = "proto3";
option java_package = "wmfx";

// Tags for client requests.
enum RequestType {
    NONE = 0;
    CREATE = 1;
    JOIN = 2;
    LIST = 3;
    LEAVE = 4;
    MESSAGE = 5;
}

// Message object that client sends to server.
message ClientRequest {
    string clientId = 1;
    RequestType type = 2;
    string body = 3;
    string room = 4;
}